--- a/lr4/ОТЧЁТ.md
+++ b/lr4/ОТЧЁТ.md
@@ -1,5 +1,5 @@
 # ОТЧЕТ
-## По лабораторной работе №X: [Название лабораторной работы]
+## По лабораторной работе 4: Теория параллельных вычислений
 
 ### Сведения о студенте
 **Дата:** 09.10.2025 
