--- a/lr4/ОТЧЁТ.md
+++ b/lr4/ОТЧЁТ.md
@@ -192,13 +192,14 @@
 - Allgatherv
 - Reduce_scatter
 - Allreduce
+
 Из-за пересылки массивов большой длинны всем процессам. Поэтому увеличение N можемт приводить к проблемам с производительностью.
 
 # 5.6 Оценка объёма передаваемых данных
 Алноритыми рассылки всреднем = 𝑁 ⋅ 8 ⋅ log ⁡ 2 (n) N⋅8⋅log 2 ​ (p) байт, где
-N - кол-во элементов в строке
-8 - размер float64
-log 2 (n) - дерево рассылки по процессам
+- N - кол-во элементов в строке
+- 8 - размер float64
+- log 2 (n) - дерево рассылки по процессам
 
 # 5.7 Как изменение 𝑁 N влияет на время коммуникаций
 - рост 𝑁 N прямо увеличит время на эти коллективы (линейно в первом приближении), особенно если сеть узкая или задержки велики.
