--- a/lr4/ОТЧЁТ.md
+++ b/lr4/ОТЧЁТ.md
@@ -188,7 +188,7 @@
 
 Упрощённая версия (Таблица 4) в целом показывает более низкие результаты и более стабильное поведение, чем тяжёлый параллельный алгоритм.
 
-# 5.5 Какие MPI-функции являются самыми проблемными и влияние N
+# 5.5 Какие MPI-функции являются самыми проблемными
 - Allgatherv
 - Reduce_scatter
 - Allreduce
@@ -201,7 +201,7 @@
 - 8 - размер float64
 - log 2 (n) - дерево рассылки по процессам
 
-# 5.7 Как изменение 𝑁 N влияет на время коммуникаций
+# 5.7 Как изменение N влияет на время коммуникаций
 - рост 𝑁 N прямо увеличит время на эти коллективы (линейно в первом приближении), особенно если сеть узкая или задержки велики.
 - Если 𝑁 N очень мал, то узким местом становится не столько объём одного сообщения, сколько количество коллективных вызовов и их синхронизирующий эффект (latency, барьеры, частые маленькие сообщения). То есть даже при малых 𝑁 N частые коллективные операции портят масштабируемость.
 
