--- a/lr4/ОТЧЁТ.md
+++ b/lr4/ОТЧЁТ.md
@@ -210,16 +210,16 @@
 - Распараллеливать не только строки, но и столбцы
 
 ## 7. Ответы на контрольные вопросы
-1. **Закон Амдала:** (S(n)=1/((1-p)+p/n)). Ускорение ограничено последовательной долей (1-p), накладными на синхронизацию, коммуникации и балансом нагрузки.
-2. **Сильная vs слабая масштабируемость:** сильная - фикс. задача, уменьшается время; слабая — фикс. работа на процесс, растёт задача (важно для увеличения размера задачи).
-3. **Почему эффективность падает:** растут коммуникации, синхронизации и накладные; появляется несбалансированность и конкуренция за ресурсы.
-4. **Влияние N и M в CG:** больше M - больше вычислений, больше N - больше глобальных векторов/коллективов (усиление коммуникаций).
-5. **Самые «дорогие» MPI-функции:** коллективы — `Allreduce`, `Allgatherv`, `Alltoall`, `Reduce_scatter` (из-за синхронизации и больших объёмов обмена).
-6. **Как выбрать оптимальный p:** измерить T(n), вычислить эффективность; выбрать p, где отдача мала (или E падает ниже порога, напр. 0.7–0.8).
-7. **Аномалии на многоядерном CPU:** NUMA, кэш контеншн, планировщик ОС, троттлинг, фоновые задачи.
-8. **Влияние планировщика кластера:** размещение по узлам, соседние джобы и переподписка влияют на сеть и стабильность таймингов.
-9. **Оптимизация коммуникаций:** Распараллеливать не только строки но и столбцы
-10. **Главное из «Twelve ways...» :** будьте честны — указывайте конфигурацию, входы, средние/разброс; не выбирайте искусственные кейсы и не скрывайте методику.
+1. **Сформулируйте закон Амдала и объясните, какие факторы ограничивают ускорение параллельных программ** (S(n)=1/((1-p)+p/n)). Ускорение ограничено последовательной долей (1-p), накладными на синхронизацию, коммуникации и балансом нагрузки.
+2. **В чем разница между сильной и слабой масштабируемостью? Приведите примеры задач, где каждый тип масштабируемости более важен** сильная - фикс. задача, уменьшается время; слабая — фикс. работа на процесс, растёт задача (важно для увеличения размера задачи).
+3. **Почему эффективность обычно снижается с ростом числа процессов?** растут коммуникации, синхронизации и накладные; появляется несбалансированность и конкуренция за ресурсы.
+4. **Влияние параметров N и M на баланс вычислений и коммуникаций в CG (методе сопряжённых градиентов)** больше M - больше вычислений, больше N - больше глобальных векторов/коллективов (усиление коммуникаций).
+5. **Какие MPI-функции создают наибольшие накладные расходы и почему?** коллективы — `Allreduce`, `Allgatherv`, `Alltoall`, `Reduce_scatter` (из-за синхронизации и больших объёмов обмена).
+6. **Как оценить оптимальное количество процессов для задачи?** измерить T(n), вычислить эффективность; выбрать p, где отдача мала (или E падает ниже порога, напр. 0.7–0.8).
+7. **Почему на многоядерном процессоре может быть аномальное поведение производительности?** NUMA, кэш контеншн, планировщик ОС, троттлинг, фоновые задачи.
+8. **Как система управления заданиями (scheduler) влияет на результаты?** размещение по узлам, соседние джобы и переподписка влияют на сеть и стабильность таймингов.
+9. **Методы оптимизации коммуникаций для улучшения масштабируемости** Распараллеливать не только строки но и столбцы
+10. **Основные рекомендации из «Twelve ways to fool the masses...» (Бейли) и как их учитывать.** будьте честны — указывайте конфигурацию, входы, средние/разброс; не выбирайте искусственные кейсы и не скрывайте методику.
 
 ## 8. Заключение
 ### 8.1. Выводы
