--- a/lr4/ОТЧЁТ.md
+++ b/lr4/ОТЧЁТ.md
@@ -56,6 +56,7 @@
 ### 4.2. Методика измерений
 - Intel Core i7 12700H: 6P + 8E ядра (14 ядер)
 - DDR4 32GB оперативной памяти
+- 5 запусков
 
 ### 4.3. Результаты измерений
 #### Таблица 1. lr1 (умножение матрицы на вектор)
