--- a/lr5-1/ОТЧЁТ.md
+++ b/lr5-1/ОТЧЁТ.md
@@ -38,7 +38,9 @@ mpiexec -n 4 python src/main.py
 [Описание тестовых данных: размеры матриц, параметры задач]
 
 ### 4.2. Методика измерений
-[Описание условий проведения экспериментов: оборудование, количество запусков]
+- Intel Core i7 12700H: 6P + 8E ядра (14 ядер)
+- DDR4 32GB оперативной памяти
+- 5 запусков
 
 ### 4.3. Результаты измерений
 #### Таблица 1. Время выполнения (секунды)
@@ -47,7 +49,7 @@ mpiexec -n 4 python src/main.py
 | 1                   | ...             | ...             | ...             |
 | 2                   | ...             | ...             | ...             |
 | 4                   | ...             | ...             | ...             |
-| 8                   | ...             | ...             | ...             |
+| 11                   | ...             | ...             | ...             |
 
 #### Таблица 2. Ускорение (Speedup)
 | Количество процессов | Размер задачи A | Размер задачи B | Размер задачи C |
