--- a/lr5-1/ОТЧЁТ.md
+++ b/lr5-1/ОТЧЁТ.md
@@ -1,41 +1,68 @@
 # ОТЧЕТ
-## По лабораторной работе №X: [Название лабораторной работы]
+## По лабораторной работе 5: Операции с группами процессов и коммуникаторами. Двумерная декомпозиция матрицы.
 
 ### Сведения о студенте
-**Дата:** [YYYY-MM-DD]
-**Семестр:** [Номер, например 3 курс 2 полугодие это 6 семестр]
-**Группа:** [Номер группы]
-**Дисциплина:** [Наименование]
-**Студент:** [ФИО]
+- **Дата:** 09.10.2025 
+- **Семестр:** 1
+- **Группа:** ПИН-м-о-25-1
+- **Дисциплина:** Параллельные вычисления 
+- **Студент:** Джабраилов Тимур Султанович
 
 ---
 
 ## 1. Цель работы
-[Кратко опишите цели лабораторной работы, можно скопировать из задания]
+Освоить технику работы с группами процессов и коммуникаторами в MPI. Реализовать параллельный алгоритм умножения матрицы на вектор с двумерным разбиением матрицы на блоки. Исследовать эффективность нового подхода по сравнению с предыдущими реализациями.
 
 ## 2. Теоретическая часть
 ### 2.1. Основные понятия и алгоритмы
-[Краткое описание теоретической основы работы: используемые алгоритмы, математические формулы, концепции MPI]
+Двумерная декомпозиция данных: Разбиение матрицы на блоки по строкам и столбцам
+Коммуникаторы и группы процессов: Создание и использование дополнительных
+коммуникаторов (Split, Create)
+Коллективные операции в подгруппах: Особенности использования Scatterv, Bcast, Reduce в
+созданных коммуникаторах
+Оптимизация коммуникаций: Снижение объема передаваемых данных за счет двумерной
+декомпозиции
 
 ### 2.2. Используемые функции MPI
-[Список и описание MPI-функций, использованных в работе]
+- Get_rank
+- Get_size
+- Bcast
+- Wtime
+- Scatterv
+- Scatter
+- Gatherv
+- Reduce
+- Allgatherv
+- Reduce_scatter
+- Allreduce
+- Split
+- Create
+- Get_group
 
 ## 3. Практическая реализация
 ### 3.1. Структура программы
-[Описание архитектуры программы, основных модулей и их взаимодействия]
+- Двумерная блочная декомпозиция: A - блоки M_part * N_part; вектор x разбит по столбцам (части x_part), результат b - по строкам (части b_part).
+- Процессы организованы в квадратную сетку num_row * num_col (num_row = num_col = sqrt(numprocs)).
+- Два подкоммуникатора: comm_row (процессы одной строке) и comm_col (процессы одного столбца).
+- Поток выполнения: rank-0 читает N,M, матрицу A и вектор x, раздаёт блоки A_part/x_part через Scatterv/временные группы; затем каждый процесс вычисляет локально b_part_temp = A_part * x_part; по строкам выполняется Reduce(SUM) для получения b_part; по столбцам - Gatherv на rank-0 для сборки полного b.
 
 ### 3.2. Ключевые особенности реализации
-[Описание нетривиальных аспектов реализации, решенных проблем]
+- Подкоммуникаторы (comm_row/comm_col) - изолируют коммуникации: x_part распространяется/броадкастится по столбцам, суммирование локальных вкладов A_part @ x_part происходит внутри строк - минимизируется глобальный трафик.
+- Нерегулярное разбиение (N/M не делятся ровно) - решено через rcounts/displs и Scatterv/Gatherv для корректных размеров блоков.
+- Сборка блоков A на rank-0 - rank-0 формирует промежуточные буферы по блочным строкам (a_temp) и создаёт временные группы/коммуникаторы (group.Range_incl + comm.Create) для корректной Scatterv только в процессы соответствующего блочного ряда.
+- Минимизация корневых операций - явные корни в строках/столбцах (первые процессы) предотвращают конфликт root-параметров и избыточные передачи.
 
 ### 3.3. Инструкция по запуску
 ```bash
 # Пример команды для запуска
 mpiexec -n 4 python src/main.py
+mpiexec -n 9 python src/main.py
+mpiexec -n 16 python src/main.py
 ```
 
 ## 4. Экспериментальная часть
 ### 4.1. Тестовые данные
-[Описание тестовых данных: размеры матриц, параметры задач]
+N = 100, M = 80
 
 ### 4.2. Методика измерений
 - Intel Core i7 12700H: 6P + 8E ядра (14 ядер)
@@ -44,78 +71,177 @@ mpiexec -n 4 python src/main.py
 
 ### 4.3. Результаты измерений
 #### Таблица 1. Время выполнения (секунды)
-| Количество процессов | Размер задачи A | Размер задачи B | Размер задачи C |
-|---------------------|-----------------|-----------------|-----------------|
-| 1                   | ...             | ...             | ...             |
-| 2                   | ...             | ...             | ...             |
-| 4                   | ...             | ...             | ...             |
-| 11                   | ...             | ...             | ...             |
-
-#### Таблица 2. Ускорение (Speedup)
-| Количество процессов | Размер задачи A | Размер задачи B | Размер задачи C |
-|---------------------|-----------------|-----------------|-----------------|
-| 1                   | 1.00            | 1.00            | 1.00            |
-| 2                   | ...             | ...             | ...             |
-| 4                   | ...             | ...             | ...             |
-| 8                   | ...             | ...             | ...             |
-
-## 5. Визуализация результатов
-### 5.1. График времени выполнения
-![График времени выполнения](images/execution_time.png)
-
-### 5.2. График ускорения
-![График ускорения](images/speedup.png)
-
-### 5.3. График эффективности
-![График эффективности](images/efficiency.png)
-
-## 6. Анализ результатов
-### 6.1. Анализ производительности
-[Обсуждение полученных результатов: соответствие закону Амдала, выявленные закономерности]
-
-### 6.2. Сравнение с теоретическими оценками
-[Сравнение экспериментальных результатов с теоретическими предсказаниями]
-
-### 6.3. Выявление узких мест
-[Анализ факторов, ограничивающих производительность: коммуникационные затраты, дисбаланс нагрузки]
+|numprocs|N  |M  |time                |
+|--------|---|---|--------------------|
+|4       |100|80 |0.007864699990022928|
+|9       |100|80 |0.021679700003005564|
+|16      |100|80 |0.010086100024636835|
 
 ## 7. Ответы на контрольные вопросы
-### Вопрос 1: [Текст вопроса]
-[Развернутый ответ]
-
-### Вопрос 2: [Текст вопроса]
-[Развернутый ответ]
-
-...
-
-### Вопрос 10: [Текст вопроса]
-[Развернутый ответ]
+в отчёте lr5-2-3
 
 ## 8. Заключение
 ### 8.1. Выводы
-[Основные выводы по работе: что удалось реализовать, какие результаты получены]
-
-### 8.2. Проблемы и решения
-[Описание возникших проблем и способов их решения]
-
-### 8.3. Перспективы улучшения
-[Предложения по дальнейшей оптимизации и развитию реализации]
+В ходе данной части лаборатрной работы были получены навыки написания более алгоритма умножения матицы на вектор, который позволяет распараллелить не только операции над строками, но и над стобцами.
 
 ## 9. Приложения
 ### 9.1. Исходный код
-[Основные фрагменты кода или ссылка на репозиторий]
+```python
+import csv
+import os
+from mpi4py import MPI
+from numpy import empty, array, int32, float64, zeros, arange, dot, sqrt, hstack
+from matplotlib.pyplot import style, figure, axes, show
+from threadpoolctl import threadpool_limits
+
+comm = MPI.COMM_WORLD
+numprocs = comm.Get_size()
+rank = comm.Get_rank()
+
+prefixPath = './data/'
+inPath = prefixPath + 'in.dat'
+aDataPath = prefixPath + 'AData.dat'
+xDataPath = prefixPath + 'xData.dat'
+
+with threadpool_limits(limits=1):
+  if (rank == 0):
+      t0 = MPI.Wtime()
+  else:
+      t0 = None
+
+  if rank == 0 :
+      f1 = open(inPath, 'r')
+      N = array(int32(f1.readline()))
+      M = array(int32(f1.readline()))
+      f1.close()
+  else :
+      N = array(0, dtype=int32)
+
+  comm.Bcast([N, 1, MPI.INT], root=0)
+
+  num_col = num_row = int32(sqrt(numprocs))
+
+  def auxiliary_arrays_determination(M, num) : 
+      ave, res = divmod(M, num)
+      rcounts = empty(num, dtype=int32)
+      displs = empty(num, dtype=int32)
+      for k in range(0, num) : 
+          if k < res :
+              rcounts[k] = ave + 1
+          else :
+              rcounts[k] = ave
+          if k == 0 :
+              displs[k] = 0
+          else :
+              displs[k] = displs[k-1] + rcounts[k-1]   
+      return rcounts, displs
+
+  if rank == 0 :
+      rcounts_M, displs_M = auxiliary_arrays_determination(M, num_row)
+      rcounts_N, displs_N = auxiliary_arrays_determination(N, num_col)
+  else :
+      rcounts_M = None; displs_M = None
+      rcounts_N = None; displs_N = None
+
+  M_part = array(0, dtype=int32); N_part = array(0, dtype=int32)
+
+  comm_col = comm.Split(rank % num_col, rank)
+  comm_row = comm.Split(rank // num_col, rank)
+
+  if rank in range(num_col):
+      comm_row.Scatter([rcounts_N, 1, MPI.INT], 
+                      [N_part, 1, MPI.INT], root=0) 
+  if rank in range(0, numprocs, num_col) :
+      comm_col.Scatter([rcounts_M, 1, MPI.INT], 
+                      [M_part, 1, MPI.INT], root=0) 
+
+  comm_col.Bcast([N_part, 1, MPI.INT], root=0)
+  comm_row.Bcast([M_part, 1, MPI.INT], root=0)  
+
+  A_part = empty((M_part , N_part), dtype=float64)
+
+  group = comm.Get_group()
+
+  if rank == 0 :
+      f2 = open(aDataPath, 'r')
+      for m in range(num_row) :
+          a_temp = empty(rcounts_M[m]*N, dtype=float64)
+          for j in range(rcounts_M[m]) :
+              for n in range(num_col) :
+                  for i in range(rcounts_N[n]) :
+                      a_temp[rcounts_M[m]*displs_N[n] + j*rcounts_N[n] + i] = float64(f2.readline())
+          if m == 0 :
+              comm_row.Scatterv([a_temp, rcounts_M[m]*rcounts_N, rcounts_M[m]*displs_N, MPI.DOUBLE], 
+                                [A_part, M_part*N_part, MPI.DOUBLE], root=0)
+          else :
+              group_temp = group.Range_incl([(0,0,1), (m*num_col,(m+1)*num_col-1,1)]) 
+              comm_temp = comm.Create(group_temp)
+              rcounts_N_temp = hstack((array(0, dtype=int32), rcounts_N))
+              displs_N_temp = hstack((array(0, dtype=int32), displs_N))
+              comm_temp.Scatterv([a_temp, rcounts_M[m]*rcounts_N_temp, rcounts_M[m]*displs_N_temp, MPI.DOUBLE], 
+                                [empty(0, dtype=float64), 0, MPI.DOUBLE], root=0)
+              group_temp.Free(); comm_temp.Free()
+      f2.close()
+  else :
+      if rank in range(num_col) :
+          comm_row.Scatterv([None, None, None, None], 
+                            [A_part, M_part*N_part, MPI.DOUBLE], root=0)
+      for m in range(1, num_row) :
+          group_temp = group.Range_incl([(0,0,1), (m*num_col,(m+1)*num_col-1,1)])
+          comm_temp = comm.Create(group_temp)
+          if rank in range(m*num_col, (m+1)*num_col) :
+              comm_temp.Scatterv([None, None, None, None], 
+                                [A_part, M_part*N_part, MPI.DOUBLE], root=0)
+              comm_temp.Free()
+          group_temp.Free()
+      
+  if rank == 0 :
+      x = empty(M, dtype=float64)
+      f3 = open(xDataPath, 'r')
+      for j in range(M) :
+          x[j] = float64(f3.readline())
+      f3.close()
+  else:
+      x = None
+
+  x_part = empty(N_part, dtype=float64)
+
+  if rank in range(num_col):
+    comm_row.Scatterv([x, rcounts_N, displs_N, MPI.DOUBLE], [x_part, N_part, MPI.DOUBLE], root=0)
+
+  comm_col.Bcast([x_part, N_part, MPI.DOUBLE], root=0)
+
+  b_part_temp = dot(A_part, x_part)
+
+  b_part = empty(M_part, dtype=float64)
+
+  comm_row.Reduce([b_part_temp, M_part, MPI.DOUBLE], [b_part, M_part, MPI.DOUBLE], op=MPI.SUM, root=0)
+
+  if rank == 0:
+      b = empty(M, dtype=float64)
+  else:
+      b = None
+
+  if rank in range(0, numprocs, num_col):
+    comm_col.Gatherv([b_part, M_part, MPI.DOUBLE], [b, rcounts_M, displs_M, MPI.DOUBLE], root=0)
+
+  if rank == 0:
+      t1 = MPI.Wtime()
+      elapsed = t1 - t0
+      csv_file = "mat_by_vec.csv"
+      need_header = not os.path.exists(csv_file)
+      with open(csv_file, "a", newline="") as f:
+          writer = csv.writer(f)
+          if need_header:
+              writer.writerow(["numprocs", "N", "M", "time"])
+          writer.writerow([numprocs, N, M, elapsed])
+      print(f"nprocs={numprocs}, time={elapsed:.6f} s (written to {csv_file})")
+```
 
 ### 9.2. Используемые библиотеки и версии
-- Python 3.8+
-- mpi4py 3.1.+
-- NumPy 1.21.+
-- OpenMPI 4.1.+
+в отчёте lr5-2-3
 
 ### 9.3. Рекомендуемая литература
-1. [Источник 1] - [Краткое описание релевантности]
-2. [Источник 2] - [Краткое описание релевантности]
-3. [Источник 3] - [Краткое описание релевантности]
-
----
+в отчёте lr5-2-3
 
 *Отчет подготовлен в рамках курса "Параллельные вычисления"*
