--- a/lr5-1/ОТЧЁТ.md
+++ b/lr5-1/ОТЧЁТ.md
@@ -78,7 +78,36 @@ N = 100, M = 80
 |16      |100|80 |0.010086100024636835|
 
 ## 7. Ответы на контрольные вопросы
-в отчёте lr5-2-3
+1. В чем основное преимущество двумерной декомпозиции данных перед одномерной с точки зрения объема передаваемых данных?
+> Передаются только части векторов, а не полные копии. Объём данных на процесс уменьшается.
+
+2. Объясните принцип работы функции MPI.Split. Что такое color и key?
+> color определяет группу, key - порядок в ней. Процессы с одинаковым color создают новый коммуникатор.
+
+3. Почему при двумерной декомпозиции для равномерного распределения данных желательно использовать число процессов, являющееся полным квадратом?
+> Чтобы создать равномерную сетку P_row * P_col и упростить разбиение на одинаковые блоки.
+
+4. Опишите процедуру распределения блоков матрицы с использованием временных коммуникаторов. В чем ее сложность?
+> Двойной Scatter: сначала по строкам/столбцам, затем внутри них. Сложность - в расчёте смещений и управлении буферами.
+
+5. Как организована редукция частичных результатов при умножении матрицы на вектор в двумерной декомпозиции и почему именно так?
+> Редукция по строкам для суммирования частичных результатов. Это локализует коммуникации.
+
+6. Каким образом в модифицированном МСГ удалось избежать операций с векторами полной длины N?
+> Использованием локальных коллективов в подкоммуникаторах вместо глобальных операций.
+
+7. На каких процессах сосредоточена работа с векторами x и p (длины N), а на каких — с векторами b и Ax (длины M) в новой реализации?
+> x / p - в столбцовых коммуникаторах (длина N), b / Ax - в строковых (длина M).
+
+8. В каких сценариях (соотношение N и M) двумерная декомпозиция показывает наибольшую эффективность и почему?
+> При больших и сравнимых N и M, и большом числе процессов. Т.к. у каждого процессам не должен быть весь вектор, а лишь его кусок.
+
+9. Каковы основные накладные расходы у реализации с двумерной декомпозицией
+> Создание коммуникаторов, сложная логика распределения данных, дополнительные коллективные операции.
+
+10. Какие дальнейшие шаги по оптимизации алгоритма вы можете предложить?
+> Оптимальный выбор сетки процессов 
+
 
 ## 8. Заключение
 ### 8.1. Выводы
@@ -239,9 +268,50 @@ with threadpool_limits(limits=1):
 ```
 
 ### 9.2. Используемые библиотеки и версии
-в отчёте lr5-2-3
+- Python 3.8+
+- mpi4py 3.1.+
+- NumPy 1.21.+
+- OpenMPI 4.1.+
+- matplotlib 3.10+
 
 ### 9.3. Рекомендуемая литература
-в отчёте lr5-2-3
+Фундаментальные исследования (с аннотациями):
+1. Gropp, W., Lusk, E., & Thakur, R. (1999). Using MPI-2: Advanced Features of the Message-Passing
+Interface. MIT Press.
+Аннотация: Классическое руководство по расширенным возможностям MPI-2. Содержит
+детальное описание работы с группами процессов, коммуникаторами и односторонними
+коммуникациями, что является теоретической основой для данной лабораторной работы. В
+книге подробно разбираются функции MPI_Comm_split и MPI_Comm_create.
+2. Thakur, R., Rabenseifner, R., & Gropp, W. (2005). Optimization of Collective Communication
+Operations in MPICH. International Journal of High Performance Computing Applications.
+Аннотация: Статья глубоко исследует внутренние механизмы и оптимизацию
+коллективных операций в одной из самых популярных реализаций MPI — MPICH. Знание
+0502_lab_Операции с группами процессов и коммуникаторами. Двумерная декомпозиция матрицы.md
+этих принципов помогает понять, почему использование специализированных
+коммуникаторов (как в данной работе) может значительно повысить производительность.
+3. Barnett, M., Gupta, S., Payne, D. G., & van de Geijn, R. (1993). Broadcasting on Meshes with
+Wormhole Routing. Journal of Parallel and Distributed Computing.
+Аннотация: Фундаментальное исследование, анализирующее эффективность
+коммуникационных операций на сеточных топологиях. Работа закладывает теоретический
+базис для понимания того, почему двумерная декомпозиция и соответствующие ей
+коммуникационные паттерны могут быть оптимальными для многих линейноалгебраических операций на современных суперкомпьютерных архитектурах.
+Практические руководства (с аннотациями):
+1. MPI Forum. (2021). MPI: A Message-Passing Interface Standard. Version 4.0.
+Аннотация: Официальная спецификация стандарта MPI. Является первоисточником и
+исчерпывающим справочником по всем функциям MPI, их аргументам и поведению.
+Незаменима для точного понимания семантики используемых в работе функций, таких как
+Scatterv, Reduce и Split.
+2. Pacheco, P. (2011). An Introduction to Parallel Programming. Morgan Kaufmann.
+Аннотация: Отличное практическое введение в параллельное программирование,
+включая обширный раздел по MPI. Книга содержит множество примеров и упражнений,
+которые помогают закрепить концепции на практике, и служит хорошим дополнением к
+лекционному материалу.
+3. Gropp, W., Hoefler, T., Thakur, R., & Lusk, E. (2014). Using Advanced MPI: Modern Features of the
+Message-Passing Interface. MIT Press.
+Аннотация: Прямое продолжение классической книги по MPI-2, фокусирующееся на
+современных возможностях. Содержит разделы, посвященные топологиям виртуальных
+коммуникаторов и гибридному программированию, что является логичным следующим
+шагом после освоения материала данной лабораторной работы.
+
 
 *Отчет подготовлен в рамках курса "Параллельные вычисления"*
