lr11 was implemented

--- a/lr11/ОТЧЕТ.md
+++ b/lr11/ОТЧЕТ.md
@@ -73,6 +73,7 @@ N = 100, M = 200000
 
 ## 5. Визуализация результатов
 ### 5.1 Результат выполнения lr11-1
+### 5.1.1 Результат в консоле
 ```bash
 Rank 2: received b = [3, 3, 3, 3, 3, 3, 3, 3, 3, 3], work = 16312661072
 Rank 1: received b = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2], work = 16177537760
@@ -81,6 +82,7 @@ Rank 0: received b = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1], work = 15882834288
 ```
 
 ### 5.2. Результат выполнения lr11-2
+### 5.2.1 Результат в консоле
 ```bash
 Rank 2: final a = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
 Rank 2: avg work time = 0.022696 s, avg wait-after-work = 0.000222 s, avg total = 0.022918 s
@@ -92,7 +94,13 @@ Rank 0: final a = [2, 2, 2, 2, 2, 2, 2, 2, 2, 2]
 Rank 0: avg work time = 0.024794 s, avg wait-after-work = 0.000048 s, avg total = 0.024842 s
 ```
 
-### 5.3. Результат выполнения lr11-3
+### 5.3. Графики ускорения и эффективности
+#### 5.3.1 График ускорения lr11-3
+![image](./images/speedup_ring.png)
+
+#### 5.3.2 График эффективности lr11-3
+![image](./images/efficiency_ring.png)
+
 #### 5.3.1 График ускорения lr11-3
 ![image](./images/speedup.png)
 
@@ -102,7 +110,7 @@ Rank 0: avg work time = 0.024794 s, avg wait-after-work = 0.000048 s, avg total 
 
 ## 6. Анализ результатов
 ### 6.2. Анализ производительности lr11-1 и lr11-2
-Обе программы корректно отрабатывают передавая по кругу массиви из 10 элементов.
+Обе программы корректно отрабатывают передавая по кругу массиви из 10 элементов. Графики показывают, что лучше себя показывает версия программы использующая неотложенные асинхронные операции.
 
 ### 6.2. Анализ производительности lr11-3
 По графикам ускорения и эффективности можно заметить, что лучше себя показывает программа lr-2-3, которая обладает более высоким ускорением и эффективностью, причём разница увеличивается с увеличением кол-ва процессов
