lr12 was implemented

--- a/lr12/ОТЧЕТ.md
+++ b/lr12/ОТЧЕТ.md
@@ -377,6 +377,8 @@ if rank == 0:
 График длительностей 2-х версий:
 ![image](./images/mat-by-vec-perf.png)
 
+Данный график показывает, что в данной программе для умножения матрицы на вектор лучше себя показывает версия с OpenMP и использование CUDA не даёт заметный преимуществ в производительности.
+
 
 ### 3.3 Решение СЛАУ
 #### 3.3.1 Решение СЛАУ c OpenMP
@@ -929,6 +931,8 @@ if rank_cart in range(num_col) :
 
 График длительностей 2-х версий:
 ![image](./images/slay_perf.png)
+
+На данном графики можно заметить, что в данной программе версия использующая CUDA покзывает значительно более эффективное решение по сравнению с OpenMP решением для более "квадратной" матрицы
 
 ## 7. Ответы на контрольные вопросы
 1. **Почему гибридное программирование (MPI+OpenMP) полезно?**
